# substack2md

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  SECURITY.md  launch-browser.sh  pyproject.toml  substack2md.py
.github/workflows/: tests.yml
substack2md/: __init__.py  __main__.py  _core.py  _version.py  cli.py
tests/: EVALS.md  conftest.py  requirements-dev.txt  test_canonical_resolver.py  test_cli_wiring.py  test_concurrency.py  test_frontmatter.py  test_live_smoke.py  test_paywall_fetch.py  test_publication_slug_edges.py  test_resume.py  test_tag_extraction.py  test_teaser_warning.py
